--- a/assets/scss/_navigation.scss
+++ b/assets/scss/_navigation.scss
@@ -22,7 +22,7 @@
       top:0;
       height:3.5em;
       line-height: 3.5em;
-      z-index:2;
+      z-index:3;
       background-color: #fff;
       //background-image: none;
       //background-image: url(../img/hero_girls.jpg);
